Bug 163731 - Style names are cropped in Stylist in Writer's Sidebar
Summary: Style names are cropped in Stylist in Writer's Sidebar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
: 163718 (view as bug list)
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2024-11-02 06:45 UTC by Roman Kuznetsov
Modified: 2024-11-06 15:43 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Styles look OK (33.83 KB, image/jpeg)
2024-11-02 06:47 UTC, Roman Kuznetsov
Details
Styles look not OK (44.09 KB, image/jpeg)
2024-11-02 06:48 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2024-11-02 06:45:58 UTC
Description:
Style names are cropped in Stylist in Writer's Sidebar

Steps to Reproduce:
1. Open Writer
2. Open Stylist in Sidebar (press F11)
3. Look at the style's names (and to a screenshots in attach)

Actual Results:
Style names are cropped in Stylist in Writer's Sidebar

Expected Results:
Style names in Stylist in Writer's Sidebar look as before regression


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc2e8daa4bdcac9ce79400269baee8e3d59f9e3d
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

but it looks good in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0a004f1a1528b8a85245de4672852b574bdc2cb2
CPU threads: 16; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

regression
Comment 1 Roman Kuznetsov 2024-11-02 06:47:55 UTC
Created attachment 197352 [details]
Styles look OK
Comment 2 Roman Kuznetsov 2024-11-02 06:48:12 UTC
Created attachment 197353 [details]
Styles look not OK
Comment 3 Buovjaga 2024-11-02 08:42:35 UTC
This is after a61fa94f70409b7c86ea7a006a784a26a2a3da84
tdf#163484 Treeview not maximized in the StyleList

Again not seen with gtk3.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0e05add86cfb996fe6a11c088c36b3fa010e2445
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 31 October 2024
Comment 4 Buovjaga 2024-11-02 15:44:35 UTC
While looking at bug 163718 I noticed that the issue goes away, if I check Spotlight at the bottom of the Styles Sidebar deck.
Comment 5 BogdanB 2024-11-03 07:04:04 UTC
I reproduce with gen

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8cfe6822f148d6f4ac545a9c66f17c4bcb1d9a3
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: x11
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Not with gtk3

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8cfe6822f148d6f4ac545a9c66f17c4bcb1d9a3
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Commit Notification 2024-11-06 11:11:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcf9699a823775bb4c5ad2a1c3bd96e8e1c4fede

tdf#163731 Style names cropped in Stylist in Writer's Sidebar

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2024-11-06 12:56:14 UTC
Verified, thanks

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: adfab29d83a4143ae8046faa6d324aca5bc76bc1
CPU threads: 8; OS: Linux 6.11; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 6 November 2024
Comment 8 Buovjaga 2024-11-06 15:43:16 UTC
*** Bug 163718 has been marked as a duplicate of this bug. ***