tdf#163731 Style names cropped in Stylist in Writer's Sidebar

regression from
    commit 7f42f031ed1b9f374f3fcba9c814dc5862492026
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Oct 10 09:39:14 2024 +0200
    tdf#100894 speed up style tree creation

Change-Id: I94f7f3edd4dc31a2a86ddd73a79f276d6c30509c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176107
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>